[tool.poetry]
name = "responses-thread-issue"
version = "0.1.0"
description = ""
authors = ["G <g.castro@degould.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
responses = "^0.23.3"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
